[package]
name = "icp_ledger_agent"
description = "An AI agent example to interact with ICP blockchain ledgers."
repository = "https://github.com/ldclabs/anda-examples/tree/main/icp_ledger_agent"
publish = false
version = "0.2.0"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anda_core = { version = "0.6" }
anda_engine = { version = "0.6" }
anda_icp = { version = "0.6" }
anda_web3_client = { version = "0.6" }
anda_engine_server = { version = "0.6" }
candid = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
structured-logger = "1"
log = "0.4"
dotenv = "0.15"
clap = { version = "4.5", features = ["derive", "env"] }
const-hex = "1"
object_store = { version = "0.11" }

[dev-dependencies]
